--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,13 @@ repositories {
 }
 
 dependencies {
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+task staging(type: Copy){
+
+    into "$buildDir/libs"
+    from("sb-rest/build/libs")
+
+}
+staging.dependsOn(":sb-rest:bootJar")
