--- a/sb-rest/build.gradle
+++ b/sb-rest/build.gradle
@@ -20,9 +20,14 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.postgresql:postgresql'
+
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compile project(":sb-engine")
+    implementation project(":sb-persistence")
+    implementation project(":sb-engine")
 
 }
 
