adds registration functionality

--- a/sb-rest/build.gradle
+++ b/sb-rest/build.gradle
@@ -13,6 +13,7 @@ jar {
 }
 group = 'org.trollheim.game'
 version = '0.0.1-SNAPSHOT'
+
 sourceCompatibility = '1.8'
 
 repositories {
@@ -24,12 +25,14 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation project(":sb-persistence")
     implementation project(":sb-engine")
 
 }
+
+
+build.dependsOn(':sb-frontend-registration:ngBuild')
 
 
 
